# sqlalchemy-d1

./: pyproject.toml
src/sqlalchemy_d1/: __init__.py  compiler.py  dialect.py  type_compiler.py
tests/: test_d1_dialect.py
