[project]
name = "sqlalchemy-d1"
version = "0.1.0"
description = ""
authors = [
    {name = "Chad Rossouw",email = "chadrossouw7247@gmail.com"},
    {name = "Murphy Lee",email = "murphylee2004@gmail.com"},
    {name = "Shreyas Rao",email = "raoshreyas2004@gmail.com"},
    {name = "Alan Zhang",email = "zhangalan54@gmail.com"},
    {name = "Daniel Alyoshin",email = "daniel.alyoshin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dynamic = ["dependencies"]

[tool.poetry]
packages = [{include = "sqlalchemy_d1", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
sqlalchemy = ">=1.4,<2"
dbapi-d1 = ">=0.1.0"  # published version

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
black = ">=25.9.0,<26.0.0"
mypy = ">=1.18.2,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.entry-points."sqlalchemy.dialects"]
d1 = "sqlalchemy_d1.dialect:D1Dialect"

# [tool.poetry.plugins."sqlalchemy.dialects"]
# d1 = "sqlalchemy_d1.dialect:D1Dialect"
